[package]
name = "zkevm-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [ "json", "rustls-tls" ] }
ethers = "2.0.6"
rand = "0.8"
chrono = "0.4.26"
zkevm = { git = "https://github.com/scroll-tech/scroll-prover.git", tag = "v0.3.1" }
types = { git = "https://github.com/scroll-tech/scroll-prover.git", tag = "v0.3.1" }
rand_xorshift = "0.3"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4"
axum = "0.4.3"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
clap = { version = "3.1.3", features = ["derive"] }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "scroll-dev-0220"  }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "scroll-dev-0220" }

[profile.test]
opt-level = 3
debug-assertions = true